src/scss/components/atoms/_button.scss
@use "./../../abstracts/mixins" as *;
@use "./../../abstracts/variables" as *;

.btn {
  cursor: pointer;
  background-color: transparent;
  font-family: inherit;
  border: none;

  &--theme {
    transition: var(--transition-duration);
    &:hover,
    &:focus {
      transform: scale(1.05);
    }
  }

  &--edit {
    --size: 2rem;
    width: var(--size);
    height: var(--size);
    border-radius: 50%;
    border: 1px solid var(--color-border);
    aspect-ratio: 1/1;

    display: flex;
    align-items: center;
    justify-content: center;

    transition: var(--transition-duration);

    &:focus {
      outline: 2px solid var(--color-border);
      outline-offset: 2px;
    }
  }

  &--complete {
    background-image: linear-gradient(
      to right bottom,
      var(--color-primary),
      var(--color-secondary)
    );
  }

  &--modal {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &--submit {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 4px;

    padding: var(--smallest-fs) var(--xl-fs);
    background-color: var(--color-background);
    border-radius: 9px;
    color: var(--color-filter);
    font-weight: 500;

    transition: var(--transition-duration);

    &:focus {
      outline: 2px solid var(--color-background);
      outline-offset: 2px;
    }

    &:hover {
      --color-background: var(--color-background-hover);
    }

    @include media($bp-mobile) {
      padding: var(--smallest-fs) var(--small-fs);
    }
  }

  &--success {
    background-color: var(--color-success);
    &:focus {
      outline: 2px solid var(--color-success);
      outline-offset: 2px;
    }
  }

  &__icon {
    --size_icon: 1rem;
    width: var(--size_icon);
    height: var(--size_icon);
    fill: var(--color-filter);
    @include media($bp-mobile) {
      display: none;
    }
  }

  &--filter {
    color: var(--color-normal-text);

    transition: var(--transition-duration);

    &:focus {
      outline: none;
    }

    &:hover,
    &:focus {
      color: var(--color-primary);
    }
  }

  &--general {
    padding: var(--small-fs) var(--default-fs);
    border-radius: 4px;
    font-weight: 500;
    transition: var(--transition-duration);
  }

  &--close {
    background-color: var(--color-background);
    color: var(--color-neutral);
    &:hover {
      background-color: var(--color-background-hover);
    }
  }

  &--confirm {
    --color-error: #dc2626;
    background-color: var(--color-error);
    color: var(--color-neutral);
    &:hover {
      --color-error: #b91c1c;
    }
  }
}

